# rust-templating-example

./: .env  Cargo.toml  docker-compose.yml
assets/: app.js
src/: db.rs  error.rs  handler.rs  main.rs
templates/: css.html  error.html  header.html  menu.html  template.html  welcome.html
templates/book/: edit.html  edit_book.html  list.html  list_books.html  new.html  new_book.html
