[package]
name = "rust-templating-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.5", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
axum = { version = "0.6.20", features = ["macros"] }
anyhow = "1.0.75"
askama_axum = "0.3.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

